# syneight

./: AUTHORS  BUGS  HACKING  Makefile.aal  Makefile.aal.old  Makefile.common  NEWS  README  README.md  TODO  bootstrap  configure.ac.in
doc/: Makefile.am
doc/api/: Makefile.am  doxygen-template.conf.in.in
doc/api/test/: Makefile.am
doc/api/test/mazegame/: Makefile.am
doc/feasibility-study/: Makefile.am  feasibility-study.bib  feasibility-study.tex
doc/lib/: Makefile.am
doc/lib/syneight/: Makefile.am  abbreviations.tex  apeiron_logo.eps  definedterms.tex  env.tex  meeting.tex  paperversion.sty  people.tex
doc/requirements/: Makefile.am  requirements.tex
doc/specification/: Makefile.am  balancing.tex  combining_TM_and_OI.tex  database_and_revisions.tex  motivation.tex  motivation.tex.old  motivation_draft.tex  notation.tex  object_activation.tex  object_integration.tex  overview.tex  plugins_and_plugins-configuration.tex  processes_and_nodes.tex  reliability.tex  specification.tex  stable_storage.tex  transaction_model.tex
doc/specification/image/: Makefile.am  client-server.dia  client-server.eps  execution-environment.dia  execution-environment.eps
doc/standards/: Makefile.am  annotations.tex  component.tex  developmentrules.tex  documentation.tex  example-component.tex  introduction.tex  language.tex  latex.tex  macros.tex  standards.tex
doc/tools/: Makefile.am  building.tex  directory-structure.tex  introduction.tex  logging.tex  svn.tex  testing.tex  tools.tex
m4/: Makefile.am  boost.m4
syneight/: doxygen.conf.in
syneight/base/annotation/: MINIDOC  config.hpp  namespace.hpp  production.hpp  testsupport.hpp  unittest.hpp
syneight/base/annotation/base/: block.hpp  condition.hpp  invariance.hpp  memory_analysis.hpp  nothrow.hpp  stack_trace.hpp  throw.hpp  trace.hpp  unexpected_exception.hpp
syneight/base/annotation/bits/: assert.hpp  assert_log.hpp  binary_trace.hpp  block.hpp  check.hpp  invariance.hpp  memory_analysis.hpp  method.hpp  nothrow.hpp  procedure.hpp  rel_modifier.hpp  stack_trace.hpp  testcase.hpp  tests.hpp  throw.hpp  trace.hpp  unexpected_exception.hpp
syneight/base/config/: MINIDOC  executable.hpp  namespace_category.hpp  namespace_category.impl.hpp  production.hpp  testsupport.hpp  unittest.hpp
syneight/base/config/internal/: common.hpp  config_annotations.hpp  main.hpp  root_category.cpp  root_category.hpp
syneight/base/diagnostics/: Makefile.aal  Makefile.aal.old  block_guard.cpp  block_guard.hpp  category.cpp  category.hpp  event.cpp  event.hpp  exception.cpp  exception.hpp  facility.cpp  facility.hpp  init.hpp  invalid_category_name.cpp  invalid_category_name.hpp  invalid_log_sink_handle_name.cpp  invalid_log_sink_handle_name.hpp  invalid_log_sink_name.cpp  invalid_log_sink_name.hpp  level.cpp  level.hpp  log_sink.cpp  log_sink.hpp  management_facility.cpp  management_facility.hpp  namespace.hpp  observer_configuration_error.cpp  observer_configuration_error.hpp  standard_exception.cpp  standard_exception.hpp  type.cpp  type.hpp
syneight/base/diagnostics/internal/: category_handle.cpp  category_handle.hpp  config_failure.cpp  config_failure.hpp  level_priority.hpp  log_sink_handle.cpp  log_sink_handle.hpp  syneight_basic_layout.cpp  syneight_basic_layout.hpp  syneight_layout_appender.cpp  syneight_layout_appender.hpp  syneight_pattern_layout.cpp  syneight_pattern_layout.hpp  syneight_simple_layout.cpp  syneight_simple_layout.hpp
syneight/base/diagnostics/kernel/: block_stack.cpp  block_stack.hpp  diagnostics_guard.hpp  facility_implementation.cpp  facility_implementation.hpp  observer.cpp  observer.hpp
syneight/base/exception/: MINIDOC  exception.cpp  exception.hpp  exception_no_throw.hpp  invalid_argument.cpp  invalid_argument.hpp  invalid_protocol.cpp  invalid_protocol.hpp  low_level_exception.cpp  low_level_exception.hpp  not_implemented.cpp  not_implemented.hpp  source_location.cpp  source_location.hpp  standard_exception_aspect.hpp  standard_exception_aspect.impl.hpp  standard_low_level_exception.cpp  standard_low_level_exception.hpp  violated_invariacne.cpp  violated_invariacne.hpp
syneight/base/memory_monitoring/: guard.cpp  guard.hpp  memory_monitoring_facility.cpp  memory_monitoring_facility.hpp  memory_operators.hpp  namespace.hpp  tick.hpp  type.cpp  type.hpp
syneight/base/memory_monitoring/kernel/: memory_monitoring_facility_implementation.cpp  memory_monitoring_facility_implementation.hpp
syneight/base/preprocessor/: NOTES  arith.hpp  emit_parameter.hpp  for.hpp  wrapper.hpp
syneight/base/preprocessor/bits/: dec.hpp  emit_parameter.hpp  emit_parameter2.hpp  emit_parameter_use.hpp  for_0_to.hpp  for_1_to.hpp
syneight/base/root/: NOTES  config.hpp
syneight/base/root/bits/: config_stl.hpp  generic_namespace_macros.hpp  namespace.hpp
syneight/base/unittest/: CONTENTS  facility.cpp  facility.hpp  level.hpp  management_facility.cpp  management_facility.hpp  namespace.hpp  test_backend.hpp  test_case.cpp  test_case.hpp  test_case_result.cpp  test_case_result.hpp  test_container.cpp  test_container.hpp  test_container_result.cpp  test_container_result.hpp  test_result.cpp  test_result.hpp  testable.cpp  testable.hpp  testable_const_visitor.cpp  testable_const_visitor.hpp  testable_list_visitor.cpp  testable_list_visitor.hpp  testable_run_visitor.cpp  testable_run_visitor.hpp  testable_subset_visitor.cpp  testable_subset_visitor.hpp  testable_visitor.cpp  testable_visitor.hpp  type.cpp  type.hpp
syneight/base/unittest/env/: file_test_data_source.cpp  file_test_data_source.hpp  filter_test_data.cpp  filter_test_data.hpp  (+9 more)
syneight/base/util/: MINIDOC  make_temp_file.cpp  make_temp_file.hpp  mutex.cpp  mutex.hpp  namespace.hpp  string.hpp
syneight/test/mazegame/: doxygen.conf.in  maze_game.b.cpp  namespace.hpp  room.cpp  room.hpp
syneight/test/xmatrix/: entry_out_of_bounds.cpp  entry_out_of_bounds.hpp  namespace.hpp  xmatrix.hpp  xmatrix.impl.hpp  xmatrix.t.cpp
tool/: Makefile.am  autoautoconf  autoautoconf2  buildit  code_stat  doxydoc  log_nest  standards_check  svn2cl  svnclean
(+66 files in other folders)
