#------------------------------------------------------------------------------
# Syneight - A soft-realtime transaction monitor
# Copyright (C) 2003-2004 The Syneight Group
#
# TODO: License.
#------------------------------------------------------------------------------

# Extra files which should be included in the distribution.
EXTRA_DIST = \
autoautoconf \
svn2cl \
svnclean

# Syneight specific Makefile targets.
docs-api:
docs-ps:
docs-pdf:
docs:

# Include some common Makefile targets.
include $(top_srcdir)/Makefile.common

