#------------------------------------------------------------------------------
# Syneight - A soft-realtime transaction monitor
# Copyright (C) 2003-2004 The Syneight Group
#
# TODO: License.
#------------------------------------------------------------------------------

# Subdirectories to process.
SUBDIRS = mazegame

# Include some common Makefile targets.
include $(top_srcdir)/Makefile.common

